# dagster_rabbit_hole

./: .gitignore  .pre-commit-config.yaml  .python-version  .user.yml  Dockerfile_dagster  README.md  dagster.yaml  docker-compose.yaml  profiles.yml  pyproject.toml  requirements.txt  workspace.yaml
dagster-demo/: __init__.py
dagster-demo/assets/yellow_taxi/: dbt.py  extract_and_cleanse.py  reporting.py
dagster-demo/helpers/: commons.py
dagster_rabbit_hole/: __init__.py  assets.py  extract.py
dwh/: .user.yml  dbt_project.yml  profiles.yml
dwh/models/: fct_trips.sql  fct_trips.yml  sources.yml
dwh/seeds/: dim_payments.csv  dim_rates.csv  dim_vendor.csv  seeds.yml
